--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-As of 2024, I am a middle-schooler. I have been coding since the age of 7 years old. I've written code in HTML, CSS, JavaScript, Python, and Scratch, but I intend on learning
-a lot more! Over the 4th grade I took a break from coding and used my time for othing things, like learning more science and math.
+As of 2024, I am a middle-schooler. I have been coding since the age of 7 years old. I've written code in HTML, CSS, JavaScript, Python, and Scratch, but I intend on learning a lot more! 
+Over the 4th grade I took a break from coding and used my time for othing things, like learning more science and math.
 I used to use repl.it for my projects, but then they changed the way their service works and it was a lot harder to use it for free. Basically, they made it 
 so that if you didn't own a subscription you could only own 3 repls. At the time I owned 48. So, now I use VS Code as my programming software. If you're interested in any of my 
 projects, you can check my Youtube channel, where I regularly post some creations I made: https://youtube.com/@PraneelSrinivasan
