--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 As of 2025, I am a middle-schooler. I have been coding since the age of 5 years old. I've written code in tons of languages like HTML, CSS, JavaScript, Python, Scratch, etc. I have also worked with libraries in Python like Pygame. 
-Tons of cool projects have been created with the help of my coding prowess and knowledge. If you are interested in any of them, it is at the bottom of the README page. 
+Tons of cool projects have been created with the help of my coding prowess and knowledge. If you are interested in any of them, it is at the bottom of this div. 
 
 Over the 4th grade I took a break from coding and used my time for other things, like learning more science and math.
 I used to use repl.it for my projects, but then they changed the way their service works, and it was a lot harder to use it for free. Basically, they made it 
