--- a/README
+++ b/README
@@ -8,4 +8,5 @@ so that if you didn't own a subscription, you could only own 3 repls. At the tim
 
 If you're interested in any of my projects, you can check my Youtube channel, where I regularly post some creations I made: https://youtube.com/@PraneelSrinivasan
 
-I may not post ALL my projects, so if you want, check out my Scratch account too!: https://scratch.mit.edu/users/br8blue/
+I have also been writing Scratch code since 1st grade, so I have a ton of projects! Some of them weren't mine, since I wanted to create my own version and experience of that game for myself and some friends. However, I have made a lot of very fun
+and impressive programs. If you're interested in my Scratch projects, you can check each and every single one of them here!: https://scratch.mit.edu/users/br8blue/
